# coredns-rust

./: Cargo.toml  Corefile  Dockerfile  LICENSE  README.md  README_CN.md  coredns-grafana.json  coredns-rust.service  docker-compose.yml  install.sh
.github/workflows/: release.yml
src/: config.rs  dns_server.rs  main.rs  types.rs
src/plugin/: cache.rs  errors.rs  forward.rs  health.rs  log.rs  mod.rs  prometheus.rs  reload.rs  stubs.rs  whoami.rs
